--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "fastboot": "^1.1.4-beta.1",
     "fastboot-express-middleware": "^1.1.1",
     "fs-promise": "^2.0.3",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "shrink-ray-current": "^3.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
